# pangu-weather-opt

./: .gitignore  NOTICE  README.md  pyproject.toml
docs/: LICENSE  NOTICE  report.md
src/pangu_weather_opt/: __init__.py
