[project]
name = "pangu-weather-opt"
version = "0.1.0"
description = "先导杯2026 — Pangu-Weather 气象大模型推理部署优化"
requires-python = "==3.11.*"
authors = [
    { name = "Qintsg" },
    { name = "KsuserKQY" },
    { name = "Raying-9" },
]
license = { text = "AFL-3.0" }
license-files = ["LICENSE", "NOTICE"]

dependencies = [
    "onescience==0.3.0; sys_platform == 'linux'",
    "torch==2.5.1",
    "onnx==1.21.0",
    "onnxsim==0.6.3",
    "onnxconverter-common==1.16.0",
    "tensorly==0.9.0",
    "torch-pruning==1.6.1",
    "onnxruntime",
]

[tool.uv]
required-version = ">=0.5.0"
prerelease = "allow"
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pangu_weather_opt"]
